--- a/templates/index.html
+++ b/templates/index.html
@@ -1,82 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>ReddiSplit</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/lux/bootstrap.min.css"
-          integrity="sha256-2AE13SXoJY6p0WSPAlYEZpalYyQ1NiipAwSt3s60n8M=" crossorigin="anonymous"/>
+  <meta charset="UTF-8">
+  <title>ReddiSplit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/lux/bootstrap.min.css"
+        integrity="sha256-2AE13SXoJY6p0WSPAlYEZpalYyQ1NiipAwSt3s60n8M=" crossorigin="anonymous"/>
     {#  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"#}
     {#        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
-    <style>
-        .field {
-            width: 100%;
-            border-radius: 4px;
-            position: relative;
-            background-color: rgba(255, 255, 255, 0.3);
-            transition: 0.3s all;
-        }
+  <style>
+    .field {
+      width: 100%;
+      border-radius: 4px;
+      position: relative;
+      background-color: rgba(255, 255, 255, 0.3);
+      transition: 0.3s all;
+    }
 
-        .field:hover {
-            background-color: rgba(255, 255, 255, 0.45);
-            box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-        }
+    .field:hover {
+      background-color: rgba(255, 255, 255, 0.45);
+      box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    }
 
-        .field.focussed input {
-            padding: 24px 16px 8px 16px;
-        }
+    .field.focussed input {
+      padding: 24px 16px 8px 16px;
+    }
 
-        .field.focussed input + label {
-            top: 4px;
-            opacity: 1;
-        }
+    .field.focussed input + label {
+      top: 4px;
+      opacity: 1;
+    }
 
-        .field.locked {
-            pointer-events: none;
-        }
+    .field.locked {
+      pointer-events: none;
+    }
 
-        .field input {
-            width: 100%;
-            position: relative;
-            padding: 0px 16px;
-            border: none;
-            border-radius: 4px;
-            font-family: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: normal;
-            background-color: transparent;
-            color: #282828;
-            outline: none;
-            box-shadow: 0px 4px 20px 0px transparent;
-            transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
-            -webkit-appearance: none;
-        }
+    .field input {
+      width: 100%;
+      position: relative;
+      padding: 0px 16px;
+      border: none;
+      border-radius: 4px;
+      font-family: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: normal;
+      background-color: transparent;
+      color: #282828;
+      outline: none;
+      box-shadow: 0px 4px 20px 0px transparent;
+      transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
+      -webkit-appearance: none;
+    }
 
-        .field input::-webkit-input-placeholder {
-            color: rgba(255, 255, 255, 0.8);
-        }
+    .field input::-webkit-input-placeholder {
+      color: rgba(255, 255, 255, 0.8);
+    }
 
-        .field input::-moz-placeholder {
-            color: rgba(255, 255, 255, 0.8);
-        }
+    .field input::-moz-placeholder {
+      color: rgba(255, 255, 255, 0.8);
+    }
 
-        .field input:-ms-input-placeholder {
-            color: rgba(255, 255, 255, 0.8);
-        }
+    .field input:-ms-input-placeholder {
+      color: rgba(255, 255, 255, 0.8);
+    }
 
-        .field input:-moz-placeholder {
-            color: rgba(255, 255, 255, 0.8);
-        }
-    </style>
+    .field input:-moz-placeholder {
+      color: rgba(255, 255, 255, 0.8);
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-    <div id="content"></div>
+  <div id="content"></div>
 </div>
 <div class="container2">
-    <div id="content2"></div>
+  <div id="content2"></div>
 </div>
 <!-- scripts -->
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -104,12 +104,17 @@
         }
 
         async perform(method, resource, data, params) {
+            console.log(data);
+            var bodyFormData = new FormData();
+            console.log(data.text);
+            bodyFormData.set('text', data.text);
+            console.log(bodyFormData);
             return client({
                 method,
                 url: resource,
-                data,
+                data: bodyFormData,
                 headers: {
-                    {#'Access-Control-Allow-Origin': '*'#}
+                    'content-type': 'multipart/form-data;',
                 },
                 params: params
             }).then(resp => {
