--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
   <title>ReddiSplit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- styles -->
-{#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/lux/bootstrap.min.css"#}
-{#        integrity="sha256-2AE13SXoJY6p0WSPAlYEZpalYyQ1NiipAwSt3s60n8M=" crossorigin="anonymous"/>#}
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/minty/bootstrap.min.css"
-         crossorigin="anonymous"/>
-{#      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">#}
+    {#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/lux/bootstrap.min.css"#}
+    {#        integrity="sha256-2AE13SXoJY6p0WSPAlYEZpalYyQ1NiipAwSt3s60n8M=" crossorigin="anonymous"/>#}
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/minty/bootstrap.min.css"
+        crossorigin="anonymous"/>
+    {#      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">#}
     {#        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
   <style>
     .field {
@@ -73,17 +73,20 @@
     }
 
     .PredictContainer {
-      display: flex;
-      flex: 1;
+    {#display: flex;#} flex: 1;
     }
 
     .TrainContainer {
-      display: flex;
-      flex: 0 0 65%;
+    {#display: flex;#} flex: 0 0 65%;
       margin-right: 10%;
     }
-    @media (min-width:961px) {
-    .ParentContainer {
+
+    .TrainContaineralert {
+    {#display: block !important;#}{#flex: 0 0 65%;#} margin-right: 10%;
+    }
+
+    @media (min-width: 961px) {
+      .ParentContainer {
         display: flex;
       }
     }
@@ -301,7 +304,7 @@
                                 </fieldset>
                             </form>
                             {modelCreated ?
-                                <div class="alert alert-success" role="alert">
+                                <div class="alert alert-success TrainContaineralert" role="alert">
                                     Model created using subreddits r/{this.state.subreddit} and
                                     r/{this.state.subreddit2}.
                                 </div>
@@ -351,26 +354,27 @@
                                         </div>
                                 }
                             </fieldset>
+                            {
+                                predictionCreated ?
+                                    <div>
+                                        {prediction ?
+                                            <div>
+                                                <div className="alert alert-success" role="alert">
+                                                    This post belongs in r/{this.state.subreddit2}!
+                                                </div>
+                                            </div>
+                                            :
+                                            <div>
+                                                <div className="alert alert-success" role="alert">
+                                                    This post belongs in r/{this.state.subreddit}!
+                                                </div>
+                                            </div>
+                                        }
+                                    </div>
+                                    : null
+                            }
                         </form>
-                        {
-                            predictionCreated ?
-                                <div>
-                                    {prediction ?
-                                        <div>
-                                            <div className="alert alert-success" role="alert">
-                                                This post belongs in r/{this.state.subreddit2}!
-                                            </div>
-                                        </div>
-                                        :
-                                        <div>
-                                            <div className="alert alert-success" role="alert">
-                                                This post belongs in r/{this.state.subreddit}!
-                                            </div>
-                                        </div>
-                                    }
-                                </div>
-                                : null
-                        }
+
                     </div>
                 </div>
             )
